@@ -10,6 +10,7 @@ Cacti CHANGELOG
 -bug: Incorporate a timeout to ss_fping.php so that a host that takes to long to finish at least returns data
 -bug: Correct the display of custom data in data input methods to follow the proper order
 -bug: Change the default behavior of ping.php to mark a host as up if either snmp or ping are successful.
+-bug: Don't allow graph_export to delete your web site.
 -feature: Incorporate snmpbulkwalk binary to user interface to speed snmpv2 & snmpv3 walk calls.
 
 0.8.6g
